<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="7"
            android:background="@color/darkgray"
            android:padding="18dip"
            android:text="@string/scoreSummary"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/overallScoreLabel"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:text="@string/overall"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/redReview"
            android:layout_span="1"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/greenReview"
            android:layout_span="1"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/blueReview"
            android:layout_span="1"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/yellowReview"
            android:layout_span="1"
            android:background="@drawable/yellow_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/purpleReview"
            android:layout_span="1"
            android:background="@drawable/purple_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/darkGrayReview"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:padding="18dip" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/trainScoreLabel"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:text="@string/train"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/redTrainReview"
            android:layout_span="1"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/greenTrainReview"
            android:layout_span="1"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/blueTrainReview"
            android:layout_span="1"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/yellowTrainReview"
            android:layout_span="1"
            android:background="@drawable/yellow_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/purpleTrainReview"
            android:layout_span="1"
            android:background="@drawable/purple_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/darkGrayTrainReview"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:padding="18dip" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ticketScoreLabel"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:text="@string/ticket"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/redTicketReview"
            android:layout_span="1"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/greenTicketReview"
            android:layout_span="1"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/blueTicketReview"
            android:layout_span="1"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/yellowTicketReview"
            android:layout_span="1"
            android:background="@drawable/yellow_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/purpleTicketReview"
            android:layout_span="1"
            android:background="@drawable/purple_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/darkGrayTicketReview"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:padding="18dip" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/bonusScoreLabel"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:text="@string/bonus"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/redBonusReview"
            android:layout_span="1"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/greenBonusReview"
            android:layout_span="1"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/blueBonusReview"
            android:layout_span="1"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/yellowBonusReview"
            android:layout_span="1"
            android:background="@drawable/yellow_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/purpleBonusReview"
            android:layout_span="1"
            android:background="@drawable/purple_button"
            android:gravity="center"
            android:padding="18dip" />

        <TextView
            android:id="@+id/darkGrayBonusReview"
            android:layout_span="1"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:padding="18dip" />
    </TableRow>

</TableLayout>